# mekorifa

documentation/: cryptography.md  readme.md
documentation/licensing/: notice.txt
scripts/: z-run
sources/: Cargo.toml  bin.rs  crypto.rs  lib.rs  main.rs  secmem.rs
